--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,10 @@ jobs:
         compiler:
           - cc: gcc-10
             cxx: g++-10
+            alias: gcc10
           - cc: clang-11
             cxx: clang++-11
+            alias: clang11
         config: [RelWithDebInfo, Debug]
 
     steps:
@@ -63,6 +65,6 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: lin64-${{ matrix.compiler.cxx }}-${{ matrix.config }}
+        name: lin64-${{ matrix.compiler.alias }}-${{ matrix.config }}
         path: |
           tests/build/tests
